# learn-python

./: .gitignore  README.md  list.py  pyproject.toml
01-python-basics/: main.py
01_Variables_and_Data_Types/: main.py
02_Conditional_Statement/: main.py
03_List/: exercise.py  main.py
src/: hello.py
src/matplotlib/: Histogram___Scatter_Plot_DataFrame.csv  ICT_Project_Data_with_Dates.csv  lab-activity1.ipynb  matplotlib.rar
src/string-manipulation/: lab-activity1.ipynb  string-manipulation.ipynb
src/string-manipulation/lab-activity-1/: README.md  lab-activity1.ipynb  main.py
src/string_manipulation/: string.md  string_exercises.py  string_manipulation.ipynb
