[project]
name = "python-boilerplate"
version = "0.1.0"
description = "Learn python using jupyter notebook"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "notebook>=7.3.2",
    "numpy>=2.2.2",
]

[dependency-groups]
dev = []
